--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">Twitter_Clone</string>
+    <string name="text_username">Phone, email or username</string>
+    <string name="text_password">Password</string>
+    <string name="text_forget_your_password">Forgot password?</string>
+    <string name="text_login_title">Log in to Twitter.</string>
+    <string name="text_recover_password_title">Find your Twitter account</string>
+    <string name="text_login">Log in</string>
 </resources>
