Implementation of funcionality in Log In, Create Account and Recovery Password

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,7 @@
     <string name="text_recover_password_title">Find your Twitter account</string>
     <string name="text_login">Log in</string>
     <string name="text_change_password">Change password</string>
+    <string name="title_activity_main">MainActivity</string>
+    <string name="text_required_field">This field is required</string>
+    <string name="text_progress_dialog_loading">Loading...</string>
 </resources>
