--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,6 @@
     <string name="text_sign_up">Sign up</string>
     <string name="text_alert_account_succes">¡Congratulations!\nyour account has been created successfully</string>
     <string name="text_accept">Accept</string>
+    <string name="text_email">Email</string>
+    <string name="text_invalid_email">Invalid email</string>
 </resources>
