--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="text_accept">Accept</string>
     <string name="text_email">Email</string>
     <string name="text_invalid_email">Invalid email</string>
+    <string name="text_enter_email">Enter your email</string>
 </resources>
