--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,6 +25,10 @@
     <string name="text_closeDrawer">Close</string>
     <string name="text_followers">Followers</string>
 
+    <string name="salience_format">Salience: %.3f</string>
+    <string name="score">Score</string>
+    <string name="magnitude">Magnitude</string>
+
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="text_cancel">CANCEL</string>
