Documentation of the Twitter Clone Project

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,10 +24,9 @@
     <string name="text_openDrawer">Open</string>
     <string name="text_closeDrawer">Close</string>
     <string name="text_followers">Followers</string>
-
-    <string name="salience_format">Salience: %.3f</string>
-    <string name="score">Score</string>
-    <string name="magnitude">Magnitude</string>
+    <string name="text_sentiment_positive">Tweet Positive</string>
+    <string name="text_sentiment_neutral">Tweet Neutral</string>
+    <string name="text_sentiment_negative">Tweet Negative</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
